# final-project-level3-cv-02

./: .gitignore  README.md  cut_img.ipynb  recommend_picture.ipynb
backend/: README.md  pyproject.toml
backend/app/: __main__.py  crud.py  database.py  main.py  models.py  schemas.py
backend/inference/: ESRGAN.py  LICENSE  README.md  SDEdit.py  image_editing.py  integrated.py  recommendation.py
backend/templates/: email.css  email.html
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: PageFooter.css  PageFooter.js  PageIntro.css  PageIntro.js  PageModal.css  PageModal.js  PageResult.css  PageResult.js  PageUpload.css  PageUpload.js  TommMain.css  TommMain.js
inference/: ESRGAN.ipynb  ESRGAN.py  LICENSE  README.md  SDEdit.py  image_editing.py  imagenet_labels.py  inference.sh  integrated.py  main.py  recommend_picture.ipynb  recommendation.ipynb  utils.py
model/: README.md  integrated.py
